CR-9 fix layout issue

--- a/themes/custom/campaign_base/sass/styles.scss
+++ b/themes/custom/campaign_base/sass/styles.scss
@@ -72,13 +72,6 @@
   }
 }
 
-header,
-.region-highlighted,
-main,
-.paragraph {
-  @include clearfix;
-  clear: both;
-}
 main {
   position: relative;
 }
